--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,7 @@
    "background": {
       "scripts": ["background.js"]
    },
-   "browser_action": {
-      "default_icon": {
-         "19": "48x48.png",
-         "38": "48x48.png"
-      },
-      "default_popup": "main.html",
-      "default_title": "スクロールのON/OFFを切り替える"
-   },
-   "options_page": "options.html",
+   "options_page": "main.html",
    "content_security_policy": "script-src 'self'; object-src",
    "description": "飯テロ.inで「もっと見る」ボタンを押すと自動スクロールします",
    "icons": {
